erDiagram
    farms {
        BIGINT id PK
        VARCHAR name
        VARCHAR address
        VARCHAR contact_email
        TEXT vision_and_goals
        BIGINT created_by_user_id FK
    }
    users {
        BIGINT id PK
        VARCHAR username
        VARCHAR password
        VARCHAR email
        VARCHAR role
        BIGINT farm_id FK
    }
    parcels {
        BIGINT id PK
        VARCHAR name
        VARCHAR crop_type
        DOUBLE area_hectares
        TEXT coordinates_json
        BIGINT farm_id FK
    }
    activities {
        BIGINT id PK
        VARCHAR title
        VARCHAR type
        DOUBLE harvested_yield_kg
        DATETIME start_date
        DATETIME end_date
        VARCHAR status
        VARCHAR comments
        BOOLEAN inventory_deducted
        BIGINT parcel_id FK
    }
    activity_workers {
        BIGINT activity_id FK
        BIGINT user_id FK
    }
    activity_machinery {
        BIGINT activity_id FK
        BIGINT machinery_id FK
    }
    activity_consumptions {
        BIGINT id PK
        BIGINT activity_id FK
        BIGINT inventory_item_id FK
        DOUBLE quantity_used
        DOUBLE unit_price_at_consumption
    }
    inventory_items {
        BIGINT id PK
        VARCHAR name
        VARCHAR category
        VARCHAR unit_of_measure
        DOUBLE quantity_available
        DOUBLE minimum_stock_threshold
        DOUBLE unit_price
        BIGINT farm_id FK
    }
    inventory_requests {
        BIGINT id PK
        VARCHAR item_name
        VARCHAR item_category
        DOUBLE quantity_requested
        VARCHAR unit_of_measure
        VARCHAR priority
        VARCHAR status
        DATETIME date_created
        BIGINT requester_id FK
        BIGINT farm_id FK
    }
    machinery {
        BIGINT id PK
        VARCHAR name
        VARCHAR model
        VARCHAR license_plate
        VARCHAR type
        VARCHAR status
        INT total_hours
        INT maintenance_interval_hours
        INT next_maintenance_hours
        DATE last_maintenance_date
        DATE purchase_date
        BIGINT farm_id FK
    }
    maintenance_logs {
        BIGINT id PK
        DATE date
        VARCHAR description
        DOUBLE cost
        INT hours_at_maintenance
        BIGINT machinery_id FK
    }
    crop_seasons {
        BIGINT id PK
        INT harvest_year
        VARCHAR crop_type
        DOUBLE total_yield_kg
        DOUBLE sale_price_per_kg
        DOUBLE revenue_override
        BIGINT parcel_id FK
    }
    notifications {
        BIGINT id PK
        VARCHAR message
        VARCHAR type
        BOOLEAN is_read
        DATETIME date_created
        BIGINT user_id FK
    }
    parcel_ndvi_history {
        BIGINT id PK
        BIGINT parcel_id
        VARCHAR period_key
        DOUBLE ndvi_value
        BOOLEAN is_mock_data
    }

    farms ||--o{ users : farm_id
    farms ||--o{ parcels : farm_id
    farms ||--o{ inventory_items : farm_id
    farms ||--o{ inventory_requests : farm_id
    farms ||--o{ machinery : farm_id
    users ||--o{ notifications : user_id
    users ||--o{ inventory_requests : requester_id
    parcels ||--o{ activities : parcel_id
    parcels ||--o{ crop_seasons : parcel_id
    activities ||--o{ activity_consumptions : activity_id
    inventory_items ||--o{ activity_consumptions : inventory_item_id
    activities ||--o{ activity_workers : activity_id
    users ||--o{ activity_workers : user_id
    activities ||--o{ activity_machinery : activity_id
    machinery ||--o{ activity_machinery : machinery_id
    machinery ||--o{ maintenance_logs : machinery_id
